--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,12 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+# .DS_Store is only for Mac users
+**/.DS_Store
+
+# ignore lock yaml file
+pnpm-lock.yaml
+
+.vscode
