--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "eslint-plugin-prettier": "^5.4.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
-    "prettier": "^3.5.3"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0",
     "globals": "^16.0.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   }
 }
