--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,jsx,ts,tsx,css,md}\"",
     "start": "nodemon server.js",
     "start:prod": "node server.js"
   },
@@ -15,8 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.5.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.4.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "winston": "^3.17.0"
@@ -24,6 +23,8 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.4.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3"
