--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint:fix": "eslint --fix",
     "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,jsx,ts,tsx,css,md}\"",
     "start": "nodemon server.js",
-    "start:prod": "node server.js"
+    "start:prod": "node server.js",
+    "swagger": "node ./scripts/generateSwagger.js",
+    "dev": "npm run swagger && npm run format && npm run lint:fix && npm run start"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "eslint-plugin-prettier": "^5.4.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "swagger-jsdoc": "^6.2.8"
   }
 }
