--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
@@ -30,7 +31,6 @@
     "eslint-plugin-prettier": "^5.4.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
-    "prettier": "^3.5.3",
-    "swagger-jsdoc": "^6.2.8"
+    "prettier": "^3.5.3"
   }
 }
